fix equation overflow on mobile screen

--- a/_sass/_distill.scss
+++ b/_sass/_distill.scss
@@ -191,3 +191,10 @@ d-appendix {
     }
   }
 }
+
+d-article pre,
+d-article mjx-container {
+  overflow-x: auto;
+  white-space: nowrap;
+}
+
